# iv-plan-hironx

./: LICENSE.txt  stack.xml
iv_idl/src/: HIROController.idl
iv_plan/: CMakeLists.txt
iv_plan/doc/: MEMO  Makefile  Makefile.ivplan  how-to-use.tex  irexdemo.tex  p2009.bib  puzzle_rarm.ogv
iv_plan/doc/figure/: apprecog.bb  four_parts_on_the_table.bb  handeye_calib.bb  recog_test_cam.bb  rtc_diagram.bb  system.bb
iv_plan/examples/: hironxsys_hand_ar.py  hironxsys_plus.py  pick_piece.py  sample_handcam.py  samplepet.py  sampleplan.py
iv_plan/scripts/: AppRecog.conf  AppRecogRight.conf  CaptureCameraRight.conf  camera_calib.yml  camera_right.yml  comcon.sh  comstop.sh  comup_left.sh  comup_right.sh  rtc_left.conf  rtc_loadpicture.conf  rtc_right.conf
iv_plan/scripts/ModelFiles/: ModelList.txt
iv_plan/src/: ArmPlanComp.py  Makefile  csplan.py  hironx.py  hironxsys.py  ivenv.py  mplan_env.py  robot.py  rtc_helper.py  toplevel_extension.py  wrl_loader.py
iv_plan/src/working/: demo_openvgr.editing.py
iv_scenario/src/: MyServiceConsumer.py  MyServiceProvider.py  demo_wexpo.py  demo_wexpo2.py  interface_wexpo.py  parser.out  puzzle.py  rtc.conf  test.py
rmrc_geo_model/: manifest.xml
rmrc_geo_model/src/geo/: geo.py
rmrc_geo_model/src/model/: hand.py  model.py  object_model_v.py  test.py
rtc_handle/src/rtc_handle/: __init__.py  rtc_handle.py
tags/0.5.0/: rosdep.yaml
tags/0.5.0/iv_plan/: Makefile.rtm
tags/0.5.0/iv_scenario/: manifest.xml
trunk/iv_idl/: manifest.xml
trunk/iv_plan/: Makefile  manifest.xml
trunk/tfpy/: manifest.xml
(+121 files in other folders)
